@@ -4,7 +4,8 @@ jEdit 5.0 version history
 
 {{{ Version 5.0pre1
 
-Thanks to Björn "Vampire" Kautler for contributing to this release.
+Thanks to Björn "Vampire" Kautler and Nathan Gray for contributing to this
+release.
 
 {{{ Bug fixes
 
@@ -19,7 +20,8 @@ Thanks to Björn "Vampire" Kautler for contributing to this release.
 
 }}}
 {{{ UI
-
+- Changed menus to use Mac-specific symbols for accelerator keys when using
+  OS X and the native look & feel (SF.net patch #1950147 - Nathan Gray)
 
 }}}
 {{{ Miscellaneous
